# musical-game

./: .gitignore  Cargo.toml  README.md
maps/: 01.ron
src/: beat.rs  camera.rs  editor.rs  level.rs  main.rs  movement.rs  playback.rs  player.rs  score.rs  state.rs  ui.rs
