[package]
name = "musical-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.13.2", features = ["dynamic_linking", "animation",
  "bevy_asset",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi-threaded",
  "png",
  "hdr",
  "vorbis",
  "x11",
  "bevy_gizmos",
  "android_shared_stdcxx",
  "tonemapping_luts",
  "default_font",
  "webgl2",
  "bevy_debug_stepping"]}
bevy_egui = "0.27.0"
bevy_kira_audio = "0.19.0"

[profile.dev.package."*"]
opt-level = 3
