[package]
name = "musical-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.13.2", features = ["dynamic_linking", "animation",
  "bevy_asset",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi-threaded",
  "png",
  "hdr",
  "vorbis",
  "x11",
  "bevy_gizmos",
  "android_shared_stdcxx",
  "tonemapping_luts",
  "default_font",
  "webgl2",
  "bevy_debug_stepping"]}
bevy_ecs = "0.13.2"
bevy_egui = "0.27.0"
bevy_kira_audio = { version = "0.19.0", features = ["flac", "mp3", "ogg"] }
bevy_reflect = "0.13.2"
moonshine-save = "0.3.7"
ron = "0.8.1"
sickle_ui = { git = "https://github.com/UmbraLuminosa/sickle_ui" }

[profile.dev.package."*"]
opt-level = 3
